FIXED: Improved the accuracy of timers.
DONE: The debug timer (press T while running with debug cheats on) is now drawn transparently.
DONE: The left-to-right animation in the intro now runs at a fixed speed (instead of being CPU limited).
DONE: Added in-game menu (press Escape or Backspace) with ability to change settings while in-game.
CHANGE: Removed the startup prompt to enable or disable fixes/enhancements (no longer needed).
FIXED: Fixed turning off music not working.
DONE: Added option for disabling and enabling all customization options at once.
DONE: Added option for changing the mods directory (where the game looks for custom levelsets).
DONE: Added fix for hidden floors in level 12 not appearing until after the flashing stops.
FIXED: Removed colored rectangles around hitpoints and the shadow, when using Brain's SNES graphics.
DONE: Added most of the missing CusPop customization options.
DONE: Added support for MIDI music.
FIXED: Fixed teleporting to the room above by grabbing a ledge (integer overflow bug).
FIXED: When playing back a recording, Alt+Tabbing back to SDLPoP stops the replay if Alt is released before Tab.

2018 March 24
=================
(version 1.18.1)

FIXED: Fixed the bug with the level 3 checkpoint.
FIXED: Fixed the bug in "Fix hang on teleport bug".
FIXED: Fixed the removed loose floor on level 3.

(no release date yet)
=================
(upcoming version)

FIXED: Fix looping "sword moving" sound if the player leaves a room exactly when a guard attacks.
FIXED: Support 8-bpp images in DAT files. For example the Pyramid mod contains some of these.
FIXED: Improved map-making on levels with broken room links: If a room is mapped to an already used place, then put it to the bottom of the map.
DONE: Load custom options from DOS PRINCE.EXE files.
DONE: Added a hotkey to display SDL versions. (Ctrl-C)
DONE: Save screenshots and maps into a separate folder and add numbers to the filenames.