@@ -518,3 +518,4 @@ FIXED: Improved map-making on levels with broken room links: If a room is mapped
 DONE: Load custom options from DOS PRINCE.EXE files.
 DONE: Added a hotkey to display SDL versions. (Ctrl-C)
 DONE: Save screenshots and maps into a separate folder and add numbers to the filenames.
+DONE: You can redefine keyboard controls. (Ctrl-Shift-K)
